04.sg.tf
resource "aws_security_group" "nginx-server-sg" {
  name = "${var.server_name}-sg"
  description = "security group allowing SSH and HTTP access"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
}

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
   Name = "${var.server_name}-sg"
   Environment = "${var.environment}"
   Owner = "oria.ramirez@outlook.com"
   Team: "DevOps"
   Project = "Webinar"
  
}

}

resource "aws_security_group" "jenkins_sg" {
  name        = "jenkins-sg"
  description = "Permitir acceso a Jenkins y SSH"

  # Puerto para la interfaz web de Jenkins
  ingress {
    from_port   = 8080
    to_port     = 8080
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] 
  }

  # Puerto SSH para que puedas administrar la instancia
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  # Salida a internet (necesaria para descargar Jenkins y plugins)
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "jenkins-security-group"
  }
}
